# wasm-sudoku-solver

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json
client/: .eslintrc.mjs  .prettierrc.toml  eslint.config.mjs  index.html  package.json  tailwind.config.js  vite.config.ts
client-demo/: .prettierrc.toml  index.html  package.json  tailwind.config.js  vite.config.ts
client-demo-old/: .prettierrc.toml  package.json  tailwind.config.js  vite.config.ts
client-demo-old/src/: main.ts
client-demo-old/src/components/: Cell.ts  Square.ts
client-demo-old/src/style/: index.less
client-demo/src/: grid.ts  main.ts  style.less  types.ts  utils.ts
client-demo/src/components/: Cell.ts  Content.ts  Grid.ts  Square.ts
client-demo/src/core/: ComponentBase.ts  PositionalComponentBase.ts  index.ts
client-demo/src/logic/: events.ts
client-demo/src/style/: index.less  reset.less  utils.less
client-demo/src/utils/: dom.ts  events.ts
client-vanilla/: index.html  package.json
client-vanilla/src/: main.ts
client-vanilla/src/core/: index.ts
client-vanilla/src/logic/: events.ts
client-vanilla/src/style/: variables.less
client-vanilla/src/utils/: events.ts
client/src/: App.svelte  App.vue  app.less  main.ts  types.ts
client/src/components/: ActionPanel.vue  GridCell.spec.ts  GridCell.vue  GridLayout.vue  HelloWorld.vue
core/: Cargo.toml
core/src/: analyze.rs  board.rs  infer.rs  lib.rs  solve.rs  tests.rs  types.rs  update.rs  validators.rs
wasm-lib/: .travis.yml  Cargo.toml  LICENSE_MIT
wasm-lib/src/: lib.rs
(+43 files in other folders)
