[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["Matanel Gordon <mmgordon.matanel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[dependencies.sudoku-core]
path = "../core"
package = "core"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'Worker'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
